# pycomex

./: .gitignore  .readthedocs.yml  404.html  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  DEVELOP.rst  DOCUMENTATION.rst  HISTORY.rst  HOOKS.md  LICENSE  Makefile  PLUGIN_CLI_DESIGN.md  PLUGIN_CLI_IMPLEMENTATION_SUMMARY.md  README.rst  TODO.rst  __setup.py  _pyproject.toml  index.html  llms.txt  mkdocs.yml  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  test_rich_panels_demo.py
advanced_hooks/: index.html
advanced_plugins/: index.html
basics_hooks/: index.html
docs/: advanced_hooks.md  advanced_optuna.md  advanced_plugins.md  basics_config.md  basics_inherit.md  basics_mixins.md  basics_special_parameters.md  cli_archive.md  cli_quickstart.md  cli_reference.md  cli_run.md  cli_template.md  conf.py  ex_basic.rst  examples.rst  index.md  index.rst  installation.rst  intro.rst  mkdocs.yml  modules.rst  pycomex.app.rst  pycomex.rst  requirements.txt  tools_vscode.md
docs/architecture_decisions/: 01_functional_interface.md  02_reproducible_mode.md  03_plugin_system.md  04_experiment_mixins.md  05_optuna_plugin.md  06_inherit_parameter_sentinel.md
docs/assets/: analysis.py
docs/docs/: advanced_hooks.md  advanced_plugins.md  basics_hooks.md  introduction.md  philosophy.md
docs/examples/: analysis.rst  basic.rst
docs_sphinx/: Makefile  example.rst  index.rst  intro.rst  make.bat  requirements.txt  usage.rst
docs_sphinx/architecture_decisions/: 001_reproducible_mode.md  002_actionable_parameter_type_annotations.md
introduction/: index.html
philosophy/: index.html
pycomex/: __init__.py  cli.py  config.py  experiment.py  fix_config_bug.py  fix_config_bug_README.md  plugin.py  testing.py  util.py  utils.py  work.py
pycomex/cli/: __init__.py  display.py  main.py  utils.py
pycomex/cli/commands/: __init__.py  archive.py  run.py  template.py
pycomex/examples/: 001_quickstart.py  002_basic.py  003_analysing.py  01_quickstart.py  02_basic.py  03_analysing.py  04_inheritance.py  05_testing_mode.py  06_run_experiment.py  07_meta_experiment.py  08_weights_and_biases.py  09_experiment_config.yml  10_caching.py  11_experiment_mixin.py  11_experiment_mixin_mixin.py  12_experiment_mixin.yml  README.rst  analysing.py  analysis.py  basic.py  cli.py  experiment.py  experiment_2.py  inheritance.py  quickstart.py  run_experiment.py  test.py  test.yml  wordlist.txt
pycomex/functional/: __init__.py  base.py  cache.py  experiment.py  inherit.py  mixin.py  parameter.py  testing.py  utils.py  validate.py
pycomex/plugins/notify/: main.py
pycomex/plugins/optuna/: __init__.py  cli.py  display.py  main.py  report.py
pycomex/plugins/plot_track/: main.py
pycomex/plugins/weights_biases/: main.py
pycomex/templates/: analysis.ipynb  analysis.j2  analysis.py.j2  annotations.j2  annotations.py.j2  config.yml.j2  config_stub.py.j2  experiment.py.j2  experiment_ended.text.j2  experiment_extend.py.j2  experiment_info.out.j2  experiment_parameters.text.j2  experiment_started.text.j2  experiment_status.text.j2  functional_analysis.py.j2  functional_experiment_end.out.j2  functional_experiment_error.out.j2  functional_experiment_start.out.j2  latex_table.tex.j2  list_experiments.out.j2  logo_image.txt  logo_text.txt
search/: search_index.json
tests/: __init__.py  _test_examples.py  test_bugs.py  test_caching_integration.py  test_cli.py  test_cli_archive_modify.py  test_cli_archive_scan.py  test_config.py  test_examples.py  test_experiment.py  test_experiment_abstract_experiment.py  test_experiment_sub_experiment.py  test_functional_cache.py  test_functional_experiment.py  test_functional_mixin.py  test_functional_parameter.py  test_functional_reproducibility.py  test_functional_utils.py  test_optuna_plugin.py  test_plugin.py  test_plugins_notify.py  test_plugins_weights_biases.py  test_util.py  util.py
tests/assets/: mock_config.yml  mock_experiment.py  mock_functional_experiment.py  mock_functional_experiment_with_testing.py  mock_functional_sub_experiment.py  mock_inherit_base_experiment.py  mock_mixin_logging.py  mock_mixin_simple.py  mock_sub_experiment.py  mock_sub_sub_experiment.py  test_optuna_experiment.py
tests/assets/test_plugin/: main.py
tests/assets/test_plugin_cli/: __init__.py  main.py
tests/cli/: test_archive_modify.py  test_archive_scan.py  test_main.py
tests/config/: test_config.py
tests/functional/: test_experiment.py  test_inherit.py  test_mixin.py  test_reproducibility.py  test_utils.py  test_validation.py
tests/plugins/: test_core_cli.py
tests/plugins/notify/: test_notify.py
tests/plugins/optuna/: test_cli.py  test_report.py
tests/regression/: test_bugs.py
tests/templates/: test_experiment_analysis.py.j2  test_experiment_registry.py.j2
tests/utils/: test_util.py
tools_vscode/: index.html
vscode_extension/: .eslintrc.json  .vscodeignore  GETTING_STARTED.md  LICENSE.md  README.md  USAGE.md  package-lock.json  package.json  pycomex-icon-theme.json  tsconfig.json
vscode_extension/src/: extension.ts
vscode_extension/src/codelens/: configRunProvider.ts
vscode_extension/src/commands/: runExperiment.ts
