[build-system]
requires = ["poetry.core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycomex"
version = "0.11.1"
description = "Python Computational Experiments"
license = "MIT"
authors = ["Jonas Teufel <jonseb1998@gmail.com>"]
maintainers = ["Jonas Teufel <jonseb1998@gmail.com>"]
documentation = "https://pycomex.readthedocs.io"
keywords = ["computational experiments", "data science", "maschine learning", "academia"]
packages = [
    { include = "pycomex/functional" },
    { include = "pycomex" },
]
include = [
    "pycomex/functional",
    "pycomex/templates",
    "pycomex/templates/analysis.j2",
    "pycomex/VERSION",
    "README.rst",
    "CHANGLELOG.rst"
]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.scripts]
pycomex = 'pycomex.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
numpy = ">=1.22.0"
matplotlib = ">=3.5.3"
psutil = ">=5.7.2"
rich-click = ">=1.7.0,<=1.8.0"
# This is the package that is required to send system notifications on windows.
# The problem is that this is not even installable on linux, so we need to use a marker
# to conditionally only install this on a windows system!
"win10toast" = { version = "^0.2", markers = "sys_platform == 'win32'" }

[tool.poetry.dev-dependencies]
nox = "2022.1.7"
sphinx = "5.0.2"
pytest = "7.1.3"

[tool.poetry_bumpversion.file."pycomex/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."pycomex/VERSION"]
search = "{current_version}"
replace = "{new_version}"