[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Project Metadata
# ================
name = "pycomex"
version = "0.18.0"
description = "Python Computational Experiments"
readme = "README.rst"
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"},
]
maintainers = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"},
]
license = {text = "MIT License"}
keywords = [
    "computational experiments", 
    "data science", 
    "maschine learning", 
    "academia"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Project Dependencies
# ====================
dependencies = [
    "pyyaml>=6.0,<7.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "click>=7.1.2,<8.0.0",
    "jinja2>=3.0.3,<4.0.0",
    "numpy>=1.22.0,<2.0.0",
    "matplotlib>=3.5.3,<4.0.0",
    "psutil>=5.7.2,<6.0.0",
    "moviepy>=1.0.3,<2.0.0",
    "rich-click>=1.8.0,<1.9.0",
    "desktop-notifier>=5.0.1,<6.0.0",
    "rich-argparse>=1.0.0,<2.0.0",
    "uv>=0.4.0,<0.5.0",
    "prettytable>=3.7.0,<4.0.0",
    "setuptools<=81.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5,<4.0",
    "black>=24.3,<25.0",
    "ruff>=0.2,<0.3",
    "mkdocs-material>=9.5,<10.0",
]

[project.scripts]
# Executable Scripts
# ==================
pycomex = "pycomex.cli:cli"
pycx = "pycomex.cli:cli"

# Configuration of Build System (Hatchling)
# =========================================
[tool.hatch.envs.default]
python = "^3.10"

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatchling.build]
skip_excluded_dirs = true

# Version Bumping
# ===============

[tool.bumpversion]
current_version = "0.18.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
files = [
    {filename = "pyproject.toml", search="version = \"{current_version}\"", replace="version = \"{new_version}\""},
    {filename = "README.rst"},
    {filename = "pycomex/VERSION"},
]